完成实例地址的解析